@@ -123,6 +123,34 @@ namespace tgui
 
     /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+    void Canvas::setView(const sf::View& view)
+    {
+        m_renderTexture.setView(view);
+    }
+
+    /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+    const sf::View& Canvas::getView() const
+    {
+        return m_renderTexture.getView();
+    }
+
+    /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+    const sf::View& Canvas::getDefaultView() const
+    {
+        return m_renderTexture.getDefaultView();
+    }
+
+    /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+    sf::IntRect Canvas::getViewport() const
+    {
+        return m_renderTexture.getViewport(m_renderTexture.getView());
+    }
+
+    /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
     void Canvas::clear(Color color)
     {
         m_renderTexture.clear(color);
